--- a/components/PlanetCard/PlanetCard.module.css
+++ b/components/PlanetCard/PlanetCard.module.css
@@ -8,9 +8,14 @@
     width: 300px;
     text-align: center;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-  }
-  
+   transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+  .planetCard:hover {
+   transform: scale(1.05); 
+   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+        }
+        
   .planetCard:hover {
     transform: translateY(-10px);
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
